# amt-engine

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: sync-examples-to-docs.yml
amt/: README.md  __init__.py  architecture.mmd  cli.py  core.py  export.py  logic.py  reasoning.py  runner.py  validation.py  viz.py
docs/: index.htm
docs/data/: SKOSconceptExample.ttl  chain-test.ttl
docs/js/: amt-render.js  amt.js
examples/: skos-mapping-example.ttl
ontology/: README.md  amt-shapes.ttl  amt.ttl  validate_examples.py
ontology/examples/: example-invalid.ttl  example-valid.ttl
ontology/img/: README.md
tests/: test_amt.py
