[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amt"
version = "0.2.0"
description = "Academic Meta Tool – Python edition (n-ary role chains, six fuzzy logics, SHACL validation)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "AMT contributors" }]
license = { text = "MIT" }
dependencies = [
    "rdflib>=7.0",
    "pyshacl>=0.25",
    "pyvis>=0.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
notebook = ["ipython", "ipywidgets"]

[project.scripts]
amt = "amt.cli:main"
amt-runner = "amt.runner:main"

[tool.setuptools]
packages = ["amt"]

[tool.setuptools.package-data]
amt = ["../ontology/*.ttl", "../ontology/examples/*.ttl"]
